--- a/src/styles/contactSection.scss
+++ b/src/styles/contactSection.scss
@@ -1,8 +1,8 @@
 #contactSection {
   background-color: var(--contact-bg);
   color: var(--color-white);
-  padding-right: 9rem;
-  padding-left: 9rem;
+  padding-right: 6.5rem;
+  padding-left: 6.5rem;
   width: 100%;
   min-height: 274px;
   max-height: 100%;
@@ -26,5 +26,6 @@
 
 .contactHeading {
   text-transform: uppercase;
-  font-size: 18px;
+  font-size: 1.2rem;
+  font-weight: 500;
 }
