--- a/src/styles/imageSlider.scss
+++ b/src/styles/imageSlider.scss
@@ -31,7 +31,7 @@
   }
 
   .image {
-    width: 1309px;
+    width: 100vw;
     height: 100vh;
   }
 }
@@ -57,13 +57,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 
   h1 {
-    font-family: "GilroyExtraBold";
-    font-weight: 800;
+    font-family: "Rubik";
+    font-weight: 700;
     display: block;
     font-size: 3rem;
     margin-bottom: 3rem;
+    letter-spacing: 0.2rem;
   }
 
   h3 {
@@ -87,14 +89,16 @@
 
       &::placeholder {
         color: var(--placeholder-text);
+        font-size: 1rem;
       }
     }
 
     button {
       color: var(--color-white);
       position: absolute;
+      font-size: 1rem;
       right: 0;
-      margin: 5px;
+      margin: 3px;
       width: 133px;
       border: none;
       border-radius: 36px;
