--- a/src/styles/imageSlider.scss
+++ b/src/styles/imageSlider.scss
@@ -60,12 +60,10 @@
   text-align: center;
 
   h1 {
-    font-family: "Rubik";
-    font-weight: 700;
+    font-family: GilroyExtraBold;
     display: block;
-    font-size: 3rem;
+    font-size: 4rem;
     margin-bottom: 3rem;
-    letter-spacing: 0.2rem;
   }
 
   h3 {
